--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <a href="#">More About the Product</a>
             </div>
             <div class="product_box">
-                <div class="setings_box">
+                <div class="seetings_box">
                     <img src="./img/Rectangle.png" alt="photo">
                     <h3>Automation & Orchestration</h3>
                     <p>Provision accounts, get enterprise-wide visibility, and fully integrate the cloud with your tech stack to  automate the full cloud lifecycle.</p>
