--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <div class="container">
            <div class="main_total">
             <div class="main_text">
+                
                 <h2>Complete cloud enablement has arrived.</h2>
                 <p>Oversee, secure, and scale your cloud with one solution.</p>
                 <a href="#">Request Demo</a>
@@ -67,7 +68,7 @@
             </li>
 
             <li class="main_link">
-                <img src="./img/Rectangle (4).png" alt="">
+                <img src="./ig/Rectangle (4).png" alt="">
             </li>
            </ul>
         </div>
@@ -87,6 +88,12 @@
                     <h4>Learn More</h4>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <section class="result">
+        <div class="container">
+            <h2>  </h2>
         </div>
     </section>
     
